--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build E-Calcul APK
+name: Build E-Calcul
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: '3.10'
         
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -27,32 +27,67 @@ jobs:
             git \
             zip \
             unzip \
-            openjdk-17-jdk
+            openjdk-17-jdk \
+            wget \
+            curl
             
-    - name: Install Buildozer
+    - name: Install Buildozer and dependencies
       run: |
         pip3 install --upgrade pip
-        pip3 install buildozer
+        pip3 install buildozer==1.5.0
         pip3 install cython==0.29.33
+        pip3 install kivy==2.1.0
         
-    - name: Prepare Android environment
+    - name: Pre-accept Android SDK licenses
       run: |
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
-    - name: Build APK
-      timeout-minutes: 120
+        # Скачиваем и устанавливаем Command Line Tools
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q commandlinetools-linux-9477386_latest.zip
+        mkdir -p ~/android-sdk/cmdline-tools
+        mv cmdline-tools ~/android-sdk/cmdline-tools/latest
+        
+        # Принимаем лицензии
+        yes | ~/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
+        
+        # Устанавливаем конкретные версии (стабильные)
+        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+          "platform-tools" \
+          "platforms;android-33" \
+          "build-tools;33.0.0" \
+          "ndk;25b" > /dev/null 2>&1 || true
+        
+    - name: Build with Buildozer
+      env:
+        # Форсируем принятие лицензий
+        BUILDOZER_ANDROID_ACCEPT_LICENSE: yes
+        ANDROID_SDK_ROOT: ~/android-sdk
       run: |
-        # Очищаем старые кэши
+        # Чистим кэш
         rm -rf ~/.buildozer 2>/dev/null || true
         
-        # Запускаем сборку
-        buildozer -v android debug
+        # Меняем версию Build-Tools в конфиге
+        sed -i 's/android.sdk = .*/android.sdk = 33/' buildozer.spec 2>/dev/null || true
         
-    - name: Upload APK
+        # Запускаем сборку
+        buildozer -v android debug 2>&1 | tail -50
+        
+    - name: Check and upload APK
       if: success()
+      run: |
+        if ls bin/*.apk 1> /dev/null 2>&1; then
+          echo "✅ APK успешно создан!"
+          ls -lh bin/*.apk
+        else
+          echo "❌ APK не найден"
+          exit 1
+        fi
+        
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ecalcul-apk
+        name: ecalcul-app
         path: bin/*.apk
         retention-days: 7
