--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build E-Calcul
+name: Build for RuStore
 
 on:
   push:
@@ -8,86 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 120
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    # ИСПОЛЬЗУЕМ ГОТОВЫЙ ACTION С НАСТРОЕННЫМИ ЛИЦЕНЗИЯМИ
+    - name: Build Android APK
+      uses: ArtemSBulgakov/buildozer-action@v1
       with:
-        python-version: '3.10'
+        buildozer_version: 1.5.0
+        command: android debug
         
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-            python3-pip \
-            git \
-            zip \
-            unzip \
-            openjdk-17-jdk \
-            wget \
-            curl
-            
-    - name: Install Buildozer and dependencies
-      run: |
-        pip3 install --upgrade pip
-        pip3 install buildozer==1.5.0
-        pip3 install cython==0.29.33
-        pip3 install kivy==2.1.0
-        
-    - name: Pre-accept Android SDK licenses
-      run: |
-        mkdir -p ~/.android
-        touch ~/.android/repositories.cfg
-        
-        # Скачиваем и устанавливаем Command Line Tools
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip -q commandlinetools-linux-9477386_latest.zip
-        mkdir -p ~/android-sdk/cmdline-tools
-        mv cmdline-tools ~/android-sdk/cmdline-tools/latest
-        
-        # Принимаем лицензии
-        yes | ~/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
-        
-        # Устанавливаем конкретные версии (стабильные)
-        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager \
-          "platform-tools" \
-          "platforms;android-33" \
-          "build-tools;33.0.0" \
-          "ndk;25b" > /dev/null 2>&1 || true
-        
-    - name: Build with Buildozer
-      env:
-        # Форсируем принятие лицензий
-        BUILDOZER_ANDROID_ACCEPT_LICENSE: yes
-        ANDROID_SDK_ROOT: ~/android-sdk
-      run: |
-        # Чистим кэш
-        rm -rf ~/.buildozer 2>/dev/null || true
-        
-        # Меняем версию Build-Tools в конфиге
-        sed -i 's/android.sdk = .*/android.sdk = 33/' buildozer.spec 2>/dev/null || true
-        
-        # Запускаем сборку
-        buildozer -v android debug 2>&1 | tail -50
-        
-    - name: Check and upload APK
-      if: success()
-      run: |
-        if ls bin/*.apk 1> /dev/null 2>&1; then
-          echo "✅ APK успешно создан!"
-          ls -lh bin/*.apk
-        else
-          echo "❌ APK не найден"
-          exit 1
-        fi
-        
-    - name: Upload APK artifact
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: ecalcul-app
+        name: ecalcul-apk
         path: bin/*.apk
-        retention-days: 7
